# video-edit-example-mv

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
input/: README.md
public/: subtitles.json
src/: Root.tsx
